atualizacao pagina de servicos

--- a/Servicos.html
+++ b/Servicos.html
@@ -27,6 +27,11 @@
                 Encontre o serviço ideal para o seu projeto!</p>
         </section>
 
+        <div class="ilustracao__servicos">
+            <img src="img/bwink_ind_01_single_03.jpg" alt="ilustração serviços">
+        </div>
+
+
         <section class="servicos__card">
             <div class="info__escolherservico">
                 <h3>Qual tipo de projeto você precisa?</h3>
@@ -42,17 +47,18 @@
                                 <img src="img/Box Elegance2.png" alt="">
                                 <h3>BOX DE VIDRO</h3>
                                 <p>Nossos modelos são feitos sob medida, com acabamentos modernos que valorizam o ambiente e garantem durabilidade no uso diário.<br>
-                                <span class="badge rounded-pill bg-primary"><a id="openModal" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
+                                <span class="badge rounded-pill"><a id="openModal" class="badge rounded-pill">Saiba mais</a></span></p>
                             </div>
                             <div id="modal" class="modal">
                             <div class="modal__content">
                                 <h2>BOX DE VIDRO</h2>
                                <div class="carrossel-container">
+
                                   <div class="carrossel-slide ativo">
                                     <img src="img/img-boxelegance-1.jpeg" alt="Serviço 1">
                                         <h2>Box Elegance</h2>
                                         <p class="texto-scroll">O Box Elegance é fabricado com vidro temperado de <strong>8mm</strong> ou <strong>10mm</strong>, garantindo alta resistência mecânica e térmica. 
-                                            <br><br>Conta com sistema de perfis de alumínio ou inox de baixo perfil, proporcionando acabamento discreto e moderno. As roldanas de alta performance asseguram deslizamento suave, com opções de instalação nos modelos de correr ou abrir.
+                                            <br>Conta com sistema de perfis de alumínio ou inox de baixo perfil, proporcionando acabamento discreto e moderno. As roldanas de alta performance asseguram deslizamento suave, com opções de instalação nos modelos de correr ou abrir.
                                             O produto oferece excelente vedação, resistência à umidade e fácil manutenção.<br> 
                                             Ideal para projetos que exigem padrão elevado de acabamento, durabilidade e segurança em ambientes residenciais ou comerciais.
                                             Disponível em diversas cores de perfis e possibilidade de personalização conforme medidas específicas do cliente.</p>
@@ -75,6 +81,22 @@
                                         <button>Solicite seu orçamento</button>
                                     </div>
 
+                                    <div class="carrossel-slide">
+                                        <img src="img/img-boxdecanto1.jpeg" alt="Serviço 2">
+                                        <h2>Box de Canto</h2>
+                                        <p class="texto-scroll">O Box de Canto é desenvolvido para banheiros com layout em ângulo, oferecendo aproveitamento máximo do espaço com acabamento moderno e funcional. Produzido com vidro temperado de <strong>8mm</strong> ou <strong>10mm</strong>, esse modelo garante alta resistência mecânica, segurança e durabilidade.<br>
+                                        <br>A estrutura conta com perfis em alumínio ou inox, com acabamento resistente à corrosão, disponível em diversas cores e estilos. O sistema de portas pode ser configurado conforme a necessidade do ambiente, com opções de correr ou abrir, proporcionando maior flexibilidade de uso.</p>
+                                        <button>Solicite seu orçamento</button>
+                                    </div>
+
+                                    <div class="carrossel-slide">
+                                        <img src="img/img-boxdecorrer.jpeg" alt="Serviço 2">
+                                        <h2>Box de Correr</h2>
+                                        <p class="texto-scroll">O Box de Correr é uma das soluções mais práticas e versáteis para banheiros, ideal para ambientes que exigem otimização de espaço sem abrir mão da segurança e do acabamento moderno. Fabricado com vidro temperado de <strong>8mm</strong> ou <strong>10mm</strong>, esse modelo proporciona resistência mecânica, durabilidade e conforto no uso diário.<br>
+                                        Sua estrutura conta com perfis em alumínio ou inox, com acabamento anticorrosivo, garantindo proteção contra umidade e longa vida útil. O sistema de abertura por deslizamento lateral oferece praticidade e eficiência, sendo uma excelente opção para banheiros compactos ou de médio porte.</p>
+                                        <button>Solicite seu orçamento</button>
+                                    </div>
+
                                 <!-- Botões de navegação -->
                                 <button class="carrossel-btn" id="prevBtn">⟵</button>
                                 <button class="carrossel-btn" id="nextBtn">⟶</button>
@@ -90,14 +112,14 @@
                                 <img src="img/Cobertura de vidro retratil.png" alt="">
                                 <h3>COBERTURA DE VIDRO</h3>
                                 <p>Proteção contra o tempo sem abrir mão da luz. As coberturas em vidro são ideais para áreas gourmet, varandas e corredores, com estrutura leve e resistente.<br>
-                                <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
+                                <span class="badge rounded-pill"><a href="#" class="badge rounded-pill">Saiba mais</a></span></p>
                             </div>
-
+                            
                             <div class="card">
                                 <img src="img/Guarda-Corpo.png" alt="">
                                 <h3>GUARDA-CORPO</h3>
                                 <p>Utilizamos vidros temperados e laminados que garantem proteção sem comprometer a estética.<br>
-                                <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
+                                <span class="badge rounded-pill"><a href="#" class="badge rounded-pill">Saiba mais</a></span></p>
                             </div>
                         </div>
 
@@ -107,20 +129,20 @@
                                 <img src="img/Janelas de vidro.png" alt="">
                                 <h3>JANELAS DE VIDRO</h3>
                                 <p>Conforto, ventilação e segurança com janelas de vidro e sistema maxim-ar. São perfeitas para cozinhas, banheiros e ambientes comerciais.<br>
-                                <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
+                                <span class="badge rounded-pill"><a href="#" class="badge rounded-pill">Saiba mais</a></span></p>
                             </div>
                             <div class="card">
                                 <img src="img/Envidraçamento de Sacada.png" alt="">
                                 <h3>Envidraçamento de Sacada</h3>
                                 <p>Conforto e proteção sem perder a vista. O envidraçamento de sacadas melhora o isolamento térmico e acústico, com abertura total ou parcial.<br>
-                                <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
+                                <span class="badge rounded-pill"><a href="#" class="badge rounded-pill">Saiba mais</a></span></p>
                             </div>
 
                             <div class="card">
                                 <img src="img/Esquadrias de Alumínio.png" alt="">
                                 <h3>ESQUADRIAS DE ALUMÍNIO</h3>
                                 <p>Proteja áreas externas com sistemas de vidro e alumínio que combinam resistência e design. Perfeitos para lavanderias, corredores ou áreas gourmet.<br>
-                                <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
+                                <span class="badge rounded-pill"><a href="#" class="badge rounded-pill">Saiba mais</a></span></p>
                             </div>
                         </div>
                 </div>
