--- a/Servicos.html
+++ b/Servicos.html
@@ -44,7 +44,7 @@
                 <div class="container__card">
                         <div id="card__residencial" class="card__residencial">
                             <div class="card">
-                                <img src="img/Box Elegance2.png" alt="">
+                                <img src="img/icone-boxvidro-chatgpt.png" alt="">
                                 <h3>BOX DE VIDRO</h3>
                                 <p>Nossos modelos são feitos sob medida, com acabamentos modernos que valorizam o ambiente e garantem durabilidade no uso diário.<br>
                                 <span class="badge rounded-pill"><a id="openModal" class="badge rounded-pill">Saiba mais</a></span></p>
@@ -109,14 +109,14 @@
                             
 
                             <div class="card">
-                                <img src="img/Cobertura de vidro retratil.png" alt="">
+                                <img src="img/icone-coberturadevidro-chatgpt.png" alt="">
                                 <h3>COBERTURA DE VIDRO</h3>
                                 <p>Proteção contra o tempo sem abrir mão da luz. As coberturas em vidro são ideais para áreas gourmet, varandas e corredores, com estrutura leve e resistente.<br>
                                 <span class="badge rounded-pill"><a href="#" class="badge rounded-pill">Saiba mais</a></span></p>
                             </div>
                             
                             <div class="card">
-                                <img src="img/Guarda-Corpo.png" alt="">
+                                <img src="img/icone-guardacorpo-chatgpt.png" alt="">
                                 <h3>GUARDA-CORPO</h3>
                                 <p>Utilizamos vidros temperados e laminados que garantem proteção sem comprometer a estética.<br>
                                 <span class="badge rounded-pill"><a href="#" class="badge rounded-pill">Saiba mais</a></span></p>
